--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M3R2S7KJH6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-M3R2S7KJH6');
+  </script>
 </body>
 
 </html>
